--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!--inizio header-->
     <header>
-        
-
+        <img src="./img/Logo.png" alt="Logo">
+        <h1 class="title">Toboolist</h1>
     </header>
     <!--/fine intestazione-->
 
     <!--inizio main-->
     <main>
+        <div class="box">
+
+        </div>
 
     </main>
     <!--/fine main-->
