--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 
     <!--inizio main-->
     <main>
-        <div class="box">
+        <div class="box1">
+            <button class="button">Add Task</button>
+            <input class="Section" type="Section" placeholder="Add Section">
+        </div>
+        <div class="box2">
 
         </div>
+
+        
 
     </main>
     <!--/fine main-->
