--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <section class="lista"><!--prima lisya-->
             <ul>
                 <li class="first"> &dtrif; New Task</li>
-                <li>Quarterly Newsletter <span></span></li>
+                <li>&check;Quarterly Newsletter <div class="circle" id="editorial">Editorial</div></li>
             </ul>
         </section>
 
         <section class="lista"><!--seconda lista-->
             <ul>
                 <li class="first">&dtrif; Today</li>
-                <li>Recruiting blog post<div class="circle" id="editorial"></div></li>
-                <li>Mobile app luaunch<span></span></li>
-                <li>Interview John H.<span></span></li>
-                <li>Summit update to mobile storefronts<span></span></li>
+                <li>&check;Recruiting blog post<div class="circle" id="editorial"> Editorial</div></li>
+                <li>&cross;Mobile app luaunch<div class="circle" id="Q1goals">Q1goals</div></li>
+                <li>&check;Interview John H.<div class="circle" id="recrutling">Recrutling</div></li>
+                <li>&check;Summit update to mobile storefronts<div class="circle" id="mobile">Mobile</div></li>
             </ul>
 
         </section>
@@ -44,10 +44,10 @@
         <section class="lista"><!--terza lista-->
             <ul>
                 <li class="first">&dtrif; Upcoming</li>
-                <li>Schedule meeting with Alex<span></span></li>
-                <li>Homepage refresh<span></span></li>
-                <li>Onboard new Sales team members<span></span></li>
-                <li>Rewiew editorial calendar<span></span></li>
+                <li>&cross;Schedule meeting with Alex</li>
+                <li>&check;Homepage refresh<div class="circle" id="website">Website</div></li>
+                <li>&check;Onboard new Sales team members<div class="circle" id="sales">Sales</div></li>
+                <li>&check;Rewiew editorial calendar<div class="circle" id="editorial">Editorial</div></li>
             </ul>
 
         </section>
