--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
         </div>
         <div class="box2">
 
-        <section class="lista"><!--prima lisya-->
+        <section class="lista"><!--prima lista-->
             <ul>
                 <li class="first"> &dtrif; New Task</li>
-                <li>&check;Quarterly Newsletter <div class="circle" id="editorial">Editorial</div></li>
+                <li><div id="check">&check;</div> Quarterly Newsletter <div class="circle" id="editorial">Editorial</div></li>
             </ul>
         </section>
 
         <section class="lista"><!--seconda lista-->
             <ul>
                 <li class="first">&dtrif; Today</li>
-                <li>&check;Recruiting blog post<div class="circle" id="editorial"> Editorial</div></li>
-                <li>&cross;Mobile app luaunch<div class="circle" id="Q1goals">Q1goals</div></li>
-                <li>&check;Interview John H.<div class="circle" id="recrutling">Recrutling</div></li>
-                <li>&check;Summit update to mobile storefronts<div class="circle" id="mobile">Mobile</div></li>
+                <li><div id="check">&check;</div>Recruiting blog post<div class="circle" id="editorial"> Editorial</div></li>
+                <li><div id="check">&check;</div>Mobile app luaunch<div class="circle" id="Q1goals">Q1goals</div></li>
+                <li><div id="check">&check;</div>Interview John H.<div class="circle" id="recrutling">Recrutling</div></li>
+                <li><div id="check">&check;</div>Summit update to mobile storefronts<div class="circle" id="mobile">Mobile</div></li>
             </ul>
 
         </section>
@@ -44,10 +44,10 @@
         <section class="lista"><!--terza lista-->
             <ul>
                 <li class="first">&dtrif; Upcoming</li>
-                <li>&cross;Schedule meeting with Alex</li>
-                <li>&check;Homepage refresh<div class="circle" id="website">Website</div></li>
-                <li>&check;Onboard new Sales team members<div class="circle" id="sales">Sales</div></li>
-                <li>&check;Rewiew editorial calendar<div class="circle" id="editorial">Editorial</div></li>
+                <li><div id="cross">&cross;</div>Schedule meeting with Alex</li>
+                <li><div id="check">&check;</div>Homepage refresh<div class="circle" id="website">Website</div></li>
+                <li><div id="check">&check;</div>Onboard new Sales team members<div class="circle" id="sales">Sales</div></li>
+                <li><div id="check">&check;</div>Rewiew editorial calendar<div class="circle" id="editorial">Editorial</div></li>
             </ul>
 
         </section>
